--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!doctype html>
-<html id="ngApp" ng-app="1yd_h5" data-path="<%= APP_PATH %>" data-domain="<%= APP_DOMAIN %>">
+<html id="myzd-app" ng-app="myzd-app">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, minimum-scale=1.0, user-scalable=0">
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1, maximum-scale=1.0, minimum-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="apple-touch-fullscreen" content="YES"/>
     <meta name="format-detection" content="telephone=no"/>
@@ -14,18 +15,15 @@
     <meta HTTP-EQUIV="expires" CONTENT="0">
     <title></title>
     <link rel="stylesheet" href="framework/framework.css"/>
-    <link rel="stylesheet" href="components/components.css"/>
-    <link rel="stylesheet" href="app/app.css"/>
+    <link rel="stylesheet" href="framework/theme-<%= THEME_NAME %>.css">
 </head>
-<script type="text/javascript">
-
-</script>
 <body>
 <div>
-
+    <div ui-view>
+        Loading ...
+    </div>
 </div>
 <script src="framework/framework.js"></script>
-<script src="components/components.js"></script>
 <script src="app/app.js"></script>
 </body>
 </html>
