--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <title></title>
     <link rel="stylesheet" href="framework/framework.css"/>
     <link rel="stylesheet" href="framework/theme-<%= THEME_NAME %>.css">
+    <link rel="stylesheet" href="components/components.css">
 </head>
 <body>
 <div>
@@ -24,6 +25,7 @@
     </div>
 </div>
 <script src="framework/framework.js"></script>
+<script src="components/components.js"></script>
 <script src="app/app.js"></script>
 </body>
 </html>
