--- a/index.html
+++ b/index.html
@@ -17,15 +17,14 @@
     <link rel="stylesheet" href="framework/framework.css"/>
     <link rel="stylesheet" href="framework/theme-<%= THEME_NAME %>.css">
     <link rel="stylesheet" href="components/components.css">
+    <link rel="stylesheet" href="app/app.css">
 </head>
 <body>
-<div>
     <div ui-view>
         Loading ...
     </div>
-</div>
+</body>
 <script src="framework/framework.js"></script>
 <script src="components/components.js"></script>
 <script src="app/app.js"></script>
-</body>
 </html>
